# rasa-bos-hackathon-2026

./: .gitignore  PRODUCT_README.md  README.md  package-lock.json
.claude/: settings.json  settings.local.json
.claude/skills/: project-meta.md  readme-updater.md
HuddleX_backend/: .env.example  .gitignore  =1.0.0  Makefile  config.yml  credentials.yml  endpoints.yml  pyproject.toml
HuddleX_backend/.data/chroma_db/: chroma.sqlite3
HuddleX_backend/.data/personas/: donald_j_trump.json
HuddleX_backend/.rasa/cache/: cache.db
HuddleX_backend/.rasa/cache/rasa-llm-cache/: cache.db  cache.db-shm  cache.db-wal
HuddleX_backend/.rasa/cache/tmp4cqjcgxv/: command_prompt.jinja2  config.json
HuddleX_backend/actions/: action_persona_chat.py  action_switch_persona.py  action_update_user_pref.py  api_server.py  distillation.py  persona_store.py  store.py
HuddleX_backend/actions/services/: email_client.py  file_service.py  x_client.py
HuddleX_backend/actions/worker/: briefing_generator.py  scheduler.py
HuddleX_backend/data/flows/: general_chat.yml  switch_persona.yml  update_user_pref.yml
HuddleX_backend/data/personas/: config.yml
HuddleX_backend/domain/: personas.yml
HuddleX_backend/scripts/: seed_personas.py  verify_setup.py
HuddleX_frontend/: .env.example  next.config.ts  package-lock.json  package.json
docs/: 11labFreeVoice.md  API.md  ARCHITECTURE.md  ARCHITECTURE_HuddleX_EN.md  CONVERSATION.md  DATABASE.md  DEMO_SCRIPT.md  HALLUCINATION.md  PRD.md  PROJECT_META.md
nuwa-ai/: package-lock.json  package.json
starter/: endpoints.yml
(+48 files in other folders)
