[project]
name = "huddlex-backend"
version = "0.1.0"
description = "HuddleX backend — Rasa CALM + multi-persona RAG + always-on worker."
requires-python = ">=3.10,<3.12"
dependencies = [
    "rasa-pro~=3.16.0",
    "python-dotenv>=1.0.0",
    # RAG & vector store
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # LLM calls from action server (Nebius is OpenAI-compatible)
    "openai>=1.30.0",
    # REST API for frontend
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Always-on scheduler
    "apscheduler>=3.10.0",
    # Wikipedia fetch
    "httpx>=0.27.0",
]

[project.optional-dependencies]
voice = [
    "aiohttp>=3.9.0",
    "pydub>=0.25.1",
    "simpleaudio>=1.0.4",
    "speechmatics-python>=1.11.0",
    "rich>=13.0.0",
]
dev = ["ruff>=0.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actions"]

[tool.ruff]
line-length = 100
target-version = "py310"
